# Familiar

./: .gitignore  README.md  START.bat  main.py  pyproject.toml  requirements.txt
core/: agent.py  bootstrap_deps.py  checkpoints.py  clarification.py  code_index.py  command_safety.py  context_compressor.py  conversations.py  cross_app_inference.py  database.py  debug_recorder.py  embeddings.py  event_bus.py  familiar_node.py  file_share.py  fragments.py  lsp_client.py  mcp_client.py  mcp_oauth.py  memory_agent.py  model_behavior.py  model_history.py  model_limits.py  model_quirks.py  network.py  pending_question.py  prereqs.py  proc.py  prompt_injection.py  providers.py  redact.py  reflection.py  remote_fs.py  remote_terminal.py  remote_tools.py  sounds.py  subagent.py  summarizer.py  terminal_persistence.py  terminal_tab_title.py  (+9 more)
tools/: __init__.py  apply_patch.py  archive.py  ask_user.py  audit.py  browser.py  browser_auto.py  chart.py  checkpoint_tool.py  clipboard.py  data_extract.py  db_query.py  diff_tool.py  doc_parser.py  explore_files.py  file_edit.py  file_read.py  file_search.py  file_viewer.py  file_watcher.py  file_write.py  git_tool.py  glob_tool.py  grep.py  hot_reload.py  http_client.py  lint.py  lsp.py  mcp_tool.py  memory.py  multi_edit.py  multi_file.py  network_tool.py  notebook.py  notes.py  notify.py  ocr.py  pdf_gen.py  plan.py  play_sound.py  (+21 more)
tools/tts_backends/: __init__.py  _chatterbox_worker.py  chatterbox_backend.py  chatterbox_installer.py  edge.py  elevenlabs_backend.py  voice_refs.py
ui/: app_icon.py  chart_card.py  chat_widget.py  chat_window.py  clear_conversation_dialog.py  conversation_bar.py  conversation_dialog.py  crt_overlay.py  debug_panel.py  dialog_geometry.py  diff_card.py  file_viewer.py  gadget_cards.py  glass_dialog.py  help_dialog.py  interrupt_queue_dialog.py  media_viewer.py  memory_dialog.py  paste_card.py  pty_terminal.py  question_board.py  remote_terminal_view.py  right_workspace.py  rolling_summary_format.py  settings_dialog.py  setup_banner.py  splash_screen.py  tasks_dialog.py  terminal_workspace.py  theme.py  themed_tab_widget.py  title_bar.py  tool_meta_dialog.py  workspace_notes_calendar.py
