[project]
name = "familiar"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "markdown2>=2.5.5",
    "numpy>=2.4.6",
    "openai>=2.40.0",
    "pyflakes>=3.4.0",
    "pyqt6==6.10.2",
    "pyqt6-webengine==6.9.0",
    "pyte>=0.8.2",
    "python-lsp-server>=1.14.0",
    "pywinpty>=3.0.3; sys_platform == 'win32'",
    "ptyprocess>=0.7.0; sys_platform != 'win32'",
    "requests>=2.34.2",
    "ruff>=0.15.15",
    "sqlite-vec>=0.1.9",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.8.1",
    "vispy>=0.16.2",
    "watchdog>=6.0.0",
]
